--- a/style.css
+++ b/style.css
@@ -265,12 +265,13 @@
   min-height: 300px;
 }
 #es-RC-container .es-routine {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url("./img/bg-routine.png");
   text-align: center;
-  padding: 2rem;
+}
+#es-RC-container .es-routine__bg {
+  background-image: url("./img/bg-routine.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding-top: 2rem;
 }
 #es-RC-container .es-routine a {
   text-decoration: none;
@@ -282,6 +283,7 @@
   text-transform: uppercase;
   font-size: clamp(1.75rem, 1.4737rem + 1.2632vw, 2.5rem);
   color: white;
+  padding: 1rem;
 }
 #es-RC-container .es-routine__header span {
   display: block;
@@ -293,7 +295,7 @@
   text-shadow: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
 }
 #es-RC-container .es-routine__header--S {
-  color: white;
+  color: #f08365;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -301,11 +303,16 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  justify-content: space-between;
   gap: 1rem;
-  margin: 2rem;
+  margin-top: 2rem;
+  position: relative;
 }
-#es-RC-container .es-routine__single img {
-  max-width: 30%;
+#es-RC-container .es-routine__descr {
+  max-width: 30ch;
+}
+#es-RC-container .es-routine__arrow {
+  visibility: hidden;
 }
 
 @media screen and (min-width: 601px) {
@@ -346,18 +353,42 @@
   #es-RC-container .es-benefits__icon-single--title {
     height: 3.5rem;
   }
-  .es-how__wrapper::before {
+  #es-RC-container .es-how__wrapper::before {
     content: url("./img/arrow-left.png");
     position: absolute;
     left: -80px;
     top: 80px;
   }
-  .es-use__wrapper {
+  #es-RC-container .es-use__wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
-  .es-use__single {
+  #es-RC-container .es-use__single {
     width: 33%;
+  }
+  #es-RC-container .es-routine__wrapper--flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  #es-RC-container .es-routine__header--S {
+    color: white;
+  }
+  #es-RC-container .es-routine__arrow {
+    visibility: visible;
+    max-width: 30%;
+    transform: rotate(90deg) scaleX(-1);
+  }
+  #es-RC-container .es-routine__arrow--1 {
+    position: absolute;
+    top: 100px;
+    left: 0;
+  }
+  #es-RC-container .es-routine__arrow--3 {
+    transform: rotate(270deg);
+    position: absolute;
+    top: 100px;
+    right: 0;
   }
 }/*# sourceMappingURL=style.css.map */
