--- a/style.css
+++ b/style.css
@@ -385,6 +385,10 @@
     top: 100px;
     left: 0;
   }
+  #es-RC-container .es-routine__arrow--2 {
+    position: absolute;
+    top: 100px;
+  }
   #es-RC-container .es-routine__arrow--3 {
     transform: rotate(270deg);
     position: absolute;
