--- a/style.scss
+++ b/style.scss
@@ -391,6 +391,10 @@ $padding--XXL: 6rem;
         top: 100px;
         left: 0;
       }
+      &--2 {
+        position: absolute;
+        top: 100px;
+      }
       &--3 {
         transform: rotate(270deg);
         position: absolute;
