--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@
 #es-RC-container .es-routine__wrapper--border {
   margin-inline: 3rem;
   margin-top: -70px;
-  margin-bottom: 220px;
+  margin-bottom: 160px;
   border: 2px solid #006b2d;
   border-radius: 8px;
   padding: 2rem;
@@ -361,6 +361,49 @@
   color: white;
   text-shadow: -1px 1px 0 #006b2d, 1px 1px 0 #006b2d, 1px -1px 0 #006b2d, -1px -1px 0 #006b2d;
   font-size: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem);
+}
+#es-RC-container .es-cross {
+  padding: 3rem;
+  text-align: center;
+}
+#es-RC-container .es-cross__header {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: clamp(1.75rem, 1.4737rem + 1.2632vw, 2.5rem);
+  color: #f08365;
+  margin-bottom: 2rem;
+}
+#es-RC-container .es-cross__header span {
+  font-size: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem);
+  color: white;
+  text-shadow: -1px 1px 0 #f08365, 1px 1px 0 #f08365, 1px -1px 0 #f08365, -1px -1px 0 #f08365;
+}
+#es-RC-container .es-cross__figcaption--1 {
+  color: #f08365;
+}
+#es-RC-container .es-cross__figcaption--2 {
+  color: #ff9231;
+}
+#es-RC-container .es-cross__figcaption--3 {
+  color: #ffc317;
+}
+#es-RC-container .es-cross__title {
+  font-size: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem);
+  text-transform: uppercase;
+  margin-top: 0.5rem;
+}
+#es-RC-container .es-cross__subtitle {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  text-transform: uppercase;
+  color: inherit;
+  margin-bottom: 1rem;
+}
+#es-RC-container .es-cross__descr {
+  color: black;
+  margin-bottom: 2rem;
 }
 
 @media screen and (min-width: 601px) {
@@ -442,5 +485,21 @@
     position: absolute;
     top: 100px;
     right: 0;
+  }
+  #es-RC-container .es-cross__wrapper--flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    outline: 1px solid blue;
+  }
+  #es-RC-container .es-cross__single {
+    width: 30%;
+    outline: 1px solid red;
+  }
+  #es-RC-container .es-cross__single img {
+    width: 100%;
+  }
+  #es-RC-container .es-cross__subtitle {
+    height: 3rem;
   }
 }/*# sourceMappingURL=style.css.map */
