--- a/style.css
+++ b/style.css
@@ -490,16 +490,18 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    outline: 1px solid blue;
   }
   #es-RC-container .es-cross__single {
     width: 30%;
-    outline: 1px solid red;
   }
   #es-RC-container .es-cross__single img {
     width: 100%;
   }
+  #es-RC-container .es-cross__title {
+    font-size: x-large;
+  }
   #es-RC-container .es-cross__subtitle {
     height: 3rem;
+    font-size: small;
   }
 }/*# sourceMappingURL=style.css.map */
