--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 #es-RC-container {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  max-width: 1300px;
+  margin: auto;
 }
 #es-RC-container *,
 #es-RC-container *:before,
@@ -109,7 +111,7 @@
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   color: #f08365;
 }
 #es-RC-container .es-benefits__header--subtitle--regular {
@@ -146,7 +148,7 @@
 #es-RC-container .es-benefits__icon-single--title {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: uppercase;
   color: #f08365;
   margin-top: 2rem;
@@ -154,7 +156,7 @@
 #es-RC-container .es-benefits__icon-single--descr {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 400;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: unset;
   color: black;
 }
@@ -192,7 +194,7 @@
 #es-RC-container .es-how__descr {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 400;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: unset;
   color: white;
 }
@@ -242,7 +244,7 @@
 #es-RC-container .es-use__single--step {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: uppercase;
   color: #f08365;
 }
@@ -259,7 +261,7 @@
   text-transform: uppercase;
   font-size: 700;
   color: white;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   padding: 2rem;
   margin-block: 3rem;
   min-height: 300px;
@@ -343,7 +345,7 @@
 #es-RC-container .es-routine__descr--wrapper {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: uppercase;
   color: #006b2d;
   font-size: smaller;
@@ -396,7 +398,7 @@
 #es-RC-container .es-cross__subtitle {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
-  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
   text-transform: uppercase;
   color: inherit;
   margin-bottom: 1rem;
