--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ $fw--bold: 700;
 $ft--italic: italic;
 $fs__heading--top: clamp(1.625rem, 1.4rem + 1.2vw, 2rem); // 300px-800px, 26-32px
 $fs__heading--bottom: clamp(1.75rem, 1.45rem + 1.6vw, 2.25rem); // 300px-800px, 28-36px
-$fs-body: clamp(0.875rem, 0.8rem + 0.4vw, 1rem); //14-16px
+$fs__body: clamp(0.875rem, 0.8rem + 0.4vw, 1rem); //14-16px
 $txt-shadow: 4px 2px 4px rgba(166, 97, 97, 0.3);
 $txt-stroke--white: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff,
   -1px -1px 0 #fff;
@@ -71,11 +71,14 @@ $padding--XXL: 6rem;
   padding: $padding--L;
   padding-bottom: $padding--XXL;
 }
+
 /////////////////////////////////////////////////////////////
 // main styles
 
 #es-RC-container {
   font-family: $ff--montserrat;
+  max-width: 1300px;
+  margin: auto;
   //reset
   *,
   *:before,
