--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@
 #es-RC-container .es-how__wrapper {
   position: absolute;
   padding: 2rem;
-  max-width: 34ch;
+  max-width: 32ch;
   right: 2rem;
   bottom: 2rem;
   text-align: center;
@@ -206,6 +206,7 @@
   text-transform: uppercase;
   font-size: clamp(1.625rem, 1.4rem + 1.2vw, 2rem);
   color: white;
+  margin-bottom: 1rem;
 }
 #es-RC-container .es-how__title span {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
@@ -213,6 +214,7 @@
   text-transform: uppercase;
   font-size: clamp(1.75rem, 1.45rem + 1.6vw, 2.25rem);
   color: #f09884;
+  display: block;
   text-shadow: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
 }
 #es-RC-container .es-how__descr {
@@ -488,7 +490,7 @@
     content: url("./img/arrow-left.png");
     position: absolute;
     left: -125px;
-    top: 45px;
+    top: 93px;
   }
   #es-RC-container .es-use__wrapper {
     display: flex;
