--- a/style.css
+++ b/style.css
@@ -276,6 +276,24 @@
   text-transform: uppercase;
   color: #f08365;
 }
+#es-RC-container .es-video {
+  max-width: 960px;
+  min-width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+#es-RC-container .es-video__videoCnt {
+  width: 72%;
+  margin: 0 auto;
+  padding: 40px 0;
+}
+#es-RC-container .es-video__iframe {
+  width: 100%;
+  min-height: 450px;
+  z-index: 1;
+}
 #es-RC-container .es-before-after {
   background-image: url("./img/bg-before-after.png");
   background-size: cover;
