--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@
 }
 #es-RC-container .es-use__single--img {
   margin-bottom: 0.5rem;
+  scale: 1;
+  transition: all 200ms ease-in-out;
+}
+#es-RC-container .es-use__single--img:hover {
+  scale: 1.05;
 }
 #es-RC-container .es-use__single--step {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
