--- a/style.css
+++ b/style.css
@@ -320,10 +320,6 @@
 #es-RC-container .es-routine {
   text-align: center;
 }
-#es-RC-container .es-routine a {
-  text-decoration: none;
-  color: inherit;
-}
 #es-RC-container .es-routine__header {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
@@ -355,6 +351,31 @@
   gap: 1rem;
   margin-top: 2rem;
   position: relative;
+}
+#es-RC-container .es-routine__img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#es-RC-container .es-routine__button {
+  background-color: #f08365;
+  border-radius: 10px;
+  padding: 0.5rem;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
+  text-transform: uppercase;
+  color: white;
+  text-decoration: none;
+  margin: auto;
+  width: 150px;
+  margin-top: 0.5rem;
+  transition: 0.4s ease-in-out;
+}
+#es-RC-container .es-routine__button:hover {
+  outline: 2px solid #f08365;
+  background-color: white;
+  color: #f08365;
 }
 #es-RC-container .es-routine__descr {
   max-width: 30ch;
@@ -529,6 +550,7 @@
   }
   #es-RC-container .es-routine__header {
     background-image: unset;
+    padding: unset;
   }
   #es-RC-container .es-routine__wrapper--flex {
     display: flex;
