--- a/style.css
+++ b/style.css
@@ -448,6 +448,9 @@
   color: white;
   text-shadow: -1px 1px 0 #f08365, 1px 1px 0 #f08365, 1px -1px 0 #f08365, -1px -1px 0 #f08365;
 }
+#es-RC-container .es-cross__single {
+  margin-bottom: 3rem;
+}
 #es-RC-container .es-cross__img-container {
   overflow: hidden;
   max-width: 300px;
@@ -463,11 +466,65 @@
 #es-RC-container .es-cross__figcaption--1 {
   color: #f08365;
 }
+#es-RC-container .es-cross__figcaption--1 a {
+  background-color: white;
+  border-radius: 10px;
+  outline: 2px solid #f08365;
+  padding: 1rem 3rem;
+  text-decoration: none;
+  color: #f08365;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
+  text-transform: uppercase;
+  color: #f08365;
+  transition: 0.4s ease-in-out;
+}
+#es-RC-container .es-cross__figcaption--1 a:hover {
+  background-color: #f08365;
+  color: white;
+}
 #es-RC-container .es-cross__figcaption--2 {
   color: #ff9231;
 }
+#es-RC-container .es-cross__figcaption--2 a {
+  background-color: white;
+  border-radius: 10px;
+  outline: 2px solid #ff9231;
+  padding: 1rem 3rem;
+  text-decoration: none;
+  color: #ff9231;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
+  text-transform: uppercase;
+  color: #ff9231;
+  transition: 0.4s ease-in-out;
+}
+#es-RC-container .es-cross__figcaption--2 a:hover {
+  background-color: #ff9231;
+  color: white;
+}
 #es-RC-container .es-cross__figcaption--3 {
   color: #ffc317;
+}
+#es-RC-container .es-cross__figcaption--3 a {
+  background-color: white;
+  border-radius: 10px;
+  outline: 2px solid #ffc317;
+  padding: 1rem 3rem;
+  text-decoration: none;
+  color: #ffc317;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
+  text-transform: uppercase;
+  color: #ffc317;
+  transition: 0.4s ease-in-out;
+}
+#es-RC-container .es-cross__figcaption--3 a:hover {
+  background-color: #ffc317;
+  color: white;
 }
 #es-RC-container .es-cross__title {
   font-size: clamp(1.75rem, 1.45rem + 1.6vw, 2.25rem);
